 * Added publisher to article type
 * Cleaned up user validation subroutine

2006-12-05 moj
 * Item(s)->Field(s)
 * 'No Tools Available' as FirstTool title

2006-12-05 cjg
 * Improved the way columns shows no items

2006-12-05 moj
 * Added pin delta to reset_password

2006-12-05 cjg
 * Sort rendering for reset_password

2006-12-05 cjg
 * Fixed bug with messages and GDOME. (hopefully also fixed for LibXML, but
    not tested)

======================================================================
05/12/2006 - EPRINTS-3.0-beta-3
======================================================================

2006-12-05 tmb
 * Improved Import screen, added "Test Import" option

2006-12-06 tmb
 * Added placeholders for new eprint types

2006-12-06
 * Added broad strokes of Pubmed XML and Pubmed ID import plugins (needs 
    refining later)

2006-12-06 moj
 * Switched pages->pagerange

2006-12-07 cjg
 * Fixed issue with no columns in items and review

2006-12-07 cjg
 * Added a clear error if an unknown export plugin is called from the search.
 * Fixed bug that a failed login caused it to forget where we were going.
 * Added (!) warning box for "there is a newer version" messages and 
    improved phrasing.

2006-12-08 cjg
 * Fixed a bug that workflow fields ignored required param
 * Fixed the some confusion that required was "1" in the fields config and
    "yes" in workflow.

2006-12-10 cjg
 * Added lookup scripts to use files and directories.
 * Added an empty autocomplete directory.

2006-12-10 cjg
 * Added new metadata type : multilang
 * Subject now uses multilang rather than the hack
 * Removed lots of old multilang code.
 * Made up/down arrows on multiple input css style nowrap.

2006-12-11 cjg
 * Added a note about cookies being needed.

2006-12-10 cjg
 * XML subject import now ok.
 * PubMedXML now only imports eprints, not all types.

2006-12-10 cjg
 * Fixed bug that export buffer exported all datasets

2006-12-10 cjg
 * De-centered abstracts.