@@ -3,10 +3,10 @@
 
 <epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
-    <epp:phrase id="validate:missing_http">The URL given for <b><epc:pin name="fieldname"/></b> is invalid. Did you include the initial <strong>http://</strong>?</epp:phrase>
-    <epp:phrase id="validate:bad_email">The email given for <b><epc:pin name="fieldname"/></b> is invalid.</epp:phrase>
-    <epp:phrase id="validate:missing_family">Name in field <b><epc:pin name="fieldname"/></b> is missing the "family" part.</epp:phrase>
-    <epp:phrase id="validate:missing_given">Name in field <b><epc:pin name="fieldname"/></b> is missing the "given names/initials" part.</epp:phrase>
+    <epp:phrase id="validate:missing_http">The URL given for <epc:pin name="fieldname"/> is invalid. Did you include the initial <strong>http://</strong>?</epp:phrase>
+    <epp:phrase id="validate:bad_email">The email given for <epc:pin name="fieldname"/> is invalid.</epp:phrase>
+    <epp:phrase id="validate:missing_family">Name in field <epc:pin name="fieldname"/> is missing the "family" part.</epp:phrase>
+    <epp:phrase id="validate:missing_given">Name in field <epc:pin name="fieldname"/> is missing the "given names/initials" part.</epp:phrase>
     <epp:phrase id="validate:need_description">Documents of type <em><epc:pin name="type"/></em> <epc:pin name="fieldname">need a description</epc:pin>.</epp:phrase>
     <epp:phrase id="validate:need_sub_or_issue">An item must have at least one of a <epc:pin name="fieldname">submission date</epc:pin> and an issue date.</epp:phrase>
     <epp:phrase id="validate:need_creators_or_editors">If an item does not have any <epc:pin name="fieldname">creators</epc:pin> then it must have at least one editor.</epp:phrase>
