@@ -5942,3 +5942,6 @@ PACKAGE: 2.2.99.2
 
 2006-12-10 cjg
  * De-centered abstracts.
+
+2006-12-10 cjg
+ * Fixed validate jump links for user area validate fields.
